# ece5760-final-project

./: .gitignore  LICENSE  README.md  index.html  main.py  placer-sweep.sh  pyproject.toml  run-placer.sh  test.sh
background-knowledge/: cg-fpga-parallelization.md  lef-def-format.md  quadratic-wirelength-placer-overview.md
background-knowledge/papers/: analytical-placement-survey.md
background-knowledge/proposal/: proposal.tex
benchmarks/custom/: README
benchmarks/custom/dense_pack_36/def/: dense_pack_36.def
benchmarks/custom/dense_pack_36/lef/: dense_pack_36.lef
benchmarks/custom/mesh_grid_25/def/: mesh_grid_25.def
benchmarks/custom/mesh_grid_25/lef/: mesh_grid_25.lef
benchmarks/custom/mixed_macro_10/def/: mixed_macro_10.def
benchmarks/custom/mixed_macro_10/lef/: mixed_macro_10.lef
benchmarks/custom/parallel_chains_50/def/: parallel_chains_50.def
benchmarks/custom/parallel_chains_50/lef/: parallel_chains_50.lef
benchmarks/custom/parallel_chains_75/def/: parallel_chains_75.def
benchmarks/custom/simple_logic_10/def/: simple_logic_10.def
benchmarks/custom/simple_logic_10/lef/: simple_logic_10.lef
benchmarks/custom/size_extremes_mix/def/: size_extremes_mix.def
benchmarks/custom/size_extremes_mix/lef/: size_extremes_mix.lef
benchmarks/custom/star_fanout_31/def/: star_fanout_31.def
benchmarks/custom/star_fanout_31/lef/: star_fanout_31.lef
benchmarks/custom/tiny1/def/: tiny1.def
benchmarks/custom/tiny2/def/: tiny2.def
benchmarks/custom/tiny3/def/: tiny3.def
benchmarks/custom/two_clusters_bridge/def/: two_clusters_bridge.def
benchmarks/custom/two_clusters_bridge/lef/: two_clusters_bridge.lef
benchmarks/iccad04/: README
benchmarks/iccad04/DMA/: dma.aux  seultra_script.se
benchmarks/iccad04/DMA/BOOKSHELF/: dma_BS.nets  dma_BS.nodes  dma_BS.pl  dma_BS.scl  dma_BS.wts
benchmarks/iccad04/DSP1/: dsp1.aux  seultra_script.se
benchmarks/iccad04/DSP1/BOOKSHELF/: dsp1_BS.nodes  dsp1_BS.pl  dsp1_BS.scl  dsp1_BS.wts
benchmarks/iccad04/DSP1/lef/: dsp1.lef
benchmarks/iccad04/DSP2/: dsp2.aux  seultra_script.se
benchmarks/iccad04/DSP2/BOOKSHELF/: dsp2_BS.nodes  dsp2_BS.pl  dsp2_BS.scl  dsp2_BS.wts
benchmarks/iccad04/DSP2/lef/: dsp2.lef
benchmarks/iccad04/RISC1/: risc1.aux  seultra_script.se
benchmarks/iccad04/RISC1/BOOKSHELF/: risc1_BS.nodes  risc1_BS.pl  risc1_BS.scl  risc1_BS.wts
benchmarks/iccad04/RISC1/lef/: risc1.lef
benchmarks/iccad04/RISC2/: risc2.aux  seultra_script.se
benchmarks/iccad04/RISC2/BOOKSHELF/: risc2_BS.nodes  risc2_BS.pl  risc2_BS.scl  risc2_BS.wts
benchmarks/iccad04/RISC2/lef/: risc2.lef
data/: bench-avg.csv
demo/: fpga-demo1.drawio  fpga-demo2.drawio  script.md  script.txt
design-file-tools/: lefdef-parser.py  parser.py  visualizer.py
fpga/fl/: CGTop.py
fpga/fl/test/: CGTop-test.py
fpga/hw/old/: AXPY_tb.v  DotProduct.v
fpga/hw/test/: CGTop_tb.v  CGTop_tb_v5.v  CGTop_tb_v6.v  CMakeLists.txt  cg_golden_dpi.cpp  cg_golden_dpi_v6.cpp  sim_main.cpp  test_cases.v
fpga/hw/v1/: CGCtrl.v  CGDpath.v  CGTop.v  FpMath.v  LinAlg.v  M10KLoader.v  README.md
fpga/hw/v2/: CGCtrl.v  CGDpath.v  CGTop.v  FPGATop.v  FpMath.v  LinAlg.v  README.md
fpga/hw/v3/: CGCtrl.v  CGDpath.v  CGTop.v  FpMath.v  LinAlg.v  README.md
fpga/hw/v4/: CGCtrl.v  CGDpath.v  CGTop.v  FpMath.v  LinAlg.v  README.md
fpga/hw/v5/: CGCtrl.v  CGDpath.v  CGTop.v  FPGATop.v  FpMath.v  LinAlg.v  PLAN.md  README.md
fpga/hw/v5_deep/: CGCtrl.v  CGDpath.v  CGTop.v  FPGATop.v  FpMath.v  LinAlg.v  PLAN.md  README.md
fpga/hw/v6/: CGCtrl.v  CGDpath.v  CGEngine.v  CGTop.v  FPGATop.v  FpMath.v  LinAlg.v  README.md
fpga/sw/: CMakeLists.txt  cg_fpga_mmap_driver.h  cg_fpga_mmap_driver_v5.h  cg_fpga_mmap_driver_v6.h  cg_hw_driver.h  placer.cpp
hw/: AXPY.v  MemController.sv  MemTypes.sv  SPMV.sv  macros.sv
hw/fl/: CGTop.py  LinAlg.py
hw/fl/test/: CGTop-test.py
images/: partition.drawio  spmv-v2.drawio  spmv-v3.drawio  spmv-v5.drawio  sys-integ.drawio  v1.drawio  v2.drawio  v3.drawio  v4.drawio  v5.drawio  v6.drawio
python-utils/: bench_avg.py  bench_plot.py  json_utils.py  lefdef-parser.py  lefdef_parser.py  run_placer.py  slideshow.py  visualizer.py
sw-baseline-c/: CMakeLists.txt  cg_fp_golden.h  cg_golden.h  cg_golden_driver.h  cg_golden_model.h  cg_hw_driver.h  cg_verilator_driver.h  cg_verilator_driver_v5.h  cg_verilator_driver_v6.h  placer.cpp
sw-baseline-python/: placer.py
test/: AXPY_tb.v  DotProduct_tb.v  DotProduct_tb.v.bak  MemController_tb.sv  MockMem.sv  SPMV_tb.v  TestBench.sv
