[project]
name = "ece5760-final-project"
version = "0.1.0"
description = "Analytical placer via FPGA acceleration"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lef-parser>=0.1.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "pillow>=10.0",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]
