[project]
name = "ece5760-final-project"
version = "0.1.0"
description = "Analytical placer via FPGA acceleration"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "pillow>=10.0",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "fabric>=3.2",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
]

[project.scripts]
vis = "visualizer:main"
lefdef-parser = "lefdef_parser:main"
run-placer = "run_placer:main"
bench-avg = "bench_avg:main"
bench-plot = "bench_plot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "python-utils/visualizer.py",
    "python-utils/json_utils.py",
    "python-utils/lefdef_parser.py",
    "python-utils/run_placer.py",
    "python-utils/bench_avg.py",
    "python-utils/bench_plot.py",
]

[tool.hatch.build.targets.wheel.sources]
"python-utils" = ""
